changed the language li of the navbar and remove his hover and before

--- a/assets/styles/_settings.scss
+++ b/assets/styles/_settings.scss
@@ -13,6 +13,7 @@ $black2: rgb(12, 12, 12);
 $white1: whitesmoke;
 $white2: white;
 $purple1: rgb(97, 12, 97);
+$grey1: rgb(221, 218, 218);
 
 * {
   margin: 0;
