first version of th contact part with hover on button

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -203,4 +203,86 @@ header .main-header button i {
 .icon-part .icon-part-container .list-icon-part button:hover {
   background: whitesmoke;
   color: rgb(24, 23, 23);
+}
+
+.news-part .header-news {
+  width: 90%;
+  max-width: 1300px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 70% 30%;
+  font-family: Mont, sans-serif;
+  padding: 80px 0;
+}
+.news-part .header-news h2 {
+  text-align: left;
+  font-size: 1.7rem;
+  letter-spacing: 2px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.news-part .header-news p {
+  text-align: left;
+  font-weight: 600;
+  font-size: 1rem;
+}
+.news-part .header-news button {
+  background: none;
+  border: 1px solid rgb(24, 23, 23);
+  padding: 15px 27px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  font-weight: 600;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+.news-part .header-news button:hover {
+  background: rgb(24, 23, 23);
+  color: whitesmoke;
+}
+.news-part .header-news button i {
+  -webkit-transform: translateX(5px);
+          transform: translateX(5px);
+}
+.news-part .main-news .main-news-container {
+  width: 90%;
+  max-width: 1300px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: Mont, sans-serif;
+  text-align: left;
+}
+.news-part .main-news .main-news-container > div {
+  width: 23%;
+  position: relative;
+}
+.news-part .main-news .main-news-container img {
+  width: 100%;
+  -webkit-box-shadow: 0 0 7px 0;
+          box-shadow: 0 0 7px 0;
+}
+.news-part .main-news .main-news-container h4 {
+  font-size: 1.3rem;
+  margin: 20px 0;
+  font-weight: 600;
+}
+.news-part .main-news .main-news-container p {
+  font-weight: 600;
+  margin-bottom: 50px;
+}
+.news-part .main-news .main-news-container a {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-decoration: none;
 }/*# sourceMappingURL=index.css.map */
