--- a/assets/styles/layouts/_contact.scss
+++ b/assets/styles/layouts/_contact.scss
@@ -1,1 +1,93 @@
+.contact {
+  background: $white2;
+  padding: 80px 0 40px;
 
+  .contact-container {
+    width: 90%;
+    max-width: 1300px;
+    margin: 0 auto;
+    .contact-list {
+      display: grid;
+      grid-template-columns: 20% 20% 20% 20%;
+      justify-content: space-between;
+      font-family: $font1;
+      padding-bottom: 50px;
+      position: relative;
+      &:after {
+        content: "";
+        height: 1px;
+        width: 80%;
+        background: $grey1;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      img {
+        width: 70%;
+      }
+      h5 {
+        font-size: 1.2rem;
+        text-transform: uppercase;
+        text-align: left;
+        margin-bottom: 15px;
+      }
+      li a {
+        font-size: 0.9rem;
+        font-weight: 800;
+        text-align: left;
+        margin-bottom: 15px;
+        display: block;
+        text-decoration: none;
+      }
+      p {
+        text-align: left;
+        font-weight: 700;
+        line-height: 25px;
+      }
+      a {
+        text-align: left;
+        font-weight: 700;
+        display: block;
+        text-decoration: none;
+        margin: 20px 0;
+      }
+      h6 {
+        text-align: left;
+        margin-bottom: 10px;
+      }
+      .footer-logos {
+        text-align: left;
+        i {
+          margin-right: 20px;
+          margin-bottom: 20px;
+        }
+      }
+    }
+    .contact-medias {
+      display: grid;
+      grid-template-columns: 30% 70%;
+      font-family: $font1;
+      padding-top: 70px;
+
+      h3 {
+        text-align: left;
+        font-size: 1.4rem;
+        text-transform: uppercase;
+        font-weight: 600;
+        margin-bottom: 20px;
+      }
+      p {
+        text-align: left;
+        font-weight: 700;
+        font-size: 1.1rem;
+      }
+      .medias-logos {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+  }
+}
