--- a/assets/styles/layouts/_news-part.scss
+++ b/assets/styles/layouts/_news-part.scss
@@ -49,6 +49,7 @@
       justify-content: space-between;
       font-family: $font1;
       text-align: left;
+      padding-bottom: 120px;
       > div {
         width: 23%;
         position: relative;
