--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -386,4 +386,27 @@ header .main-header button i {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+footer {
+  background: rgb(24, 23, 23);
+  padding: 40px 0;
+  font-family: Mont, sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  color: whitesmoke;
+}
+footer h3 {
+  margin-bottom: 40px;
+}
+footer ul {
+  width: 90%;
+  max-width: 1300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
 }/*# sourceMappingURL=index.css.map */
