--- a/assets/styles/layouts/_contact.scss
+++ b/assets/styles/layouts/_contact.scss
@@ -1,6 +1,9 @@
 .contact {
   background: $white2;
   padding: 80px 0 40px;
+  @media screen and (max-width: 800px) {
+    display: none;
+  }
 
   .contact-container {
     width: 90%;
