--- a/assets/styles/layouts/_header-text.scss
+++ b/assets/styles/layouts/_header-text.scss
@@ -7,5 +7,9 @@
     font-size: 1.4rem;
     font-family: $font1;
     font-weight: 700;
+
+    @media screen and (max-width: 800px) {
+      font-size: 1rem;
+    }
   }
 }
