--- a/assets/styles/layouts/_news-part.scss
+++ b/assets/styles/layouts/_news-part.scss
@@ -7,6 +7,9 @@
     grid-template-columns: 70% 30%;
     font-family: $font1;
     padding: 80px 0;
+    @media screen and (max-width: 800px) {
+      grid-template-columns: 1fr;
+    }
 
     h2 {
       text-align: left;
@@ -15,11 +18,19 @@
       font-weight: 600;
       text-transform: uppercase;
       margin-bottom: 10px;
+
+      @media screen and (max-width: 800px) {
+        text-align: center;
+      }
     }
     p {
       text-align: left;
       font-weight: 600;
       font-size: 1rem;
+      @media screen and (max-width: 800px) {
+        text-align: center;
+        margin-bottom: 40px;
+      }
     }
     button {
       background: none;
@@ -50,9 +61,19 @@
       font-family: $font1;
       text-align: left;
       padding-bottom: 120px;
+
+      @media screen and (max-width: 800px) {
+        flex-direction: column;
+      }
       > div {
         width: 23%;
         position: relative;
+
+        @media screen and (max-width: 800px) {
+          width: 50%;
+          margin: 0 auto;
+          margin-bottom: 40px;
+        }
       }
       img {
         width: 100%;
